--- a/config/database.yml
+++ b/config/database.yml
@@ -49,10 +49,7 @@ test:
 #
 production:
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: heavenlycleanteam_production
-  username: heavenlycleanteam
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+    encoding: unicode
+    pool: 5
+    username: <%= ENV['DATA_USERNAME'] %>
+    password: <%= ENV['DATA_PASSWORD'] %>
